# Deep_Learning_imageclassif

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOY.md  Image_Classification_Training_v2.ipynb  LICENSE  NemVision Project Overview.docx  README.md  image_classification.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  app.py  requirements.txt
configs/: base.yaml  efficientnet_b0.yaml  inference.yaml  mobilenet_v2.yaml  resnet50.yaml  train_baseline.yaml  train_mobilenet.yaml
data/: README.md
docs/: API.md  ARCHITECTURE.md  DATASET.md  INFERENCE.md  TRAINING.md
frontend/imageclass/: index.html
notebooks/: colab_runner.ipynb  gslc02.ipynb
results/: README.md  history.json  training_log.csv
scripts/: build_overview_docx.js  compare.py  download_dataset.py  evaluate.py  generate_gradcam.py  gradcam.py  predict.py  train.py
src/: __init__.py  config.py  data.py  engine.py  ensemble.py  evaluate.py  exceptions.py  gradcam.py  logger.py  metrics.py  model.py  models.py  utils.py
src/api/: __init__.py  inference.py  schemas.py  server.py
src/training/: __init__.py  callbacks.py  class_weights.py  trainer.py
tests/: __init__.py  conftest.py
tests/integration/: test_inference_pipeline.py  test_training_pipeline.py
tests/unit/: test_callbacks.py  test_class_weights.py  test_config.py  test_data.py  test_evaluate.py  test_gradcam.py  test_logger.py  test_model.py  test_schemas.py  test_utils.py
